# drf_deployment

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
snack_permissions_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: models.py  permissions.py  serializers.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
